tests/valid/lifetime/outlives_transitive_return.facet
fn f<'a, 'b, 'c>(r: unrestricted &'a unrestricted isize) -> unrestricted &'c unrestricted isize where 'a: 'b, 'b: 'c {
    r
}
