tests/invalid/lifetime/elision_output_explicit_and_elided_inputs.facet
fn bad<'a>(a: unrestricted &'a unrestricted isize, b: unrestricted &unrestricted isize) -> unrestricted &unrestricted isize {
    a
}
